# Club-project

./: README.md  classY.drawio  description.docx  description.md
project/: CMakeLists.txt  clublogic.cpp  clublogic.hpp  command.cpp  command.hpp  controller.cpp  controller.hpp  filesys.cpp  filesys.hpp  main.cpp  observer.hpp
tests/: descr.md  example_enter_exceptions.txt  example_entertable_exceptions.txt  example_incorrect_input.txt  example_leave_exceptions.txt  example_wait_exceptions.txt
